# plasmicheck

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  MANIFEST.in  Makefile  README.md  pyproject.toml  setup.py
.github/workflows/: ci.yml  docker.yml
.planning/: ISSUE_AUDIT_REPORT.md  MILESTONES.md  PHASE3_PLAN.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  v0.33.0-MILESTONE-PLAN.md
.planning/milestones/: v0.32.0-MILESTONE-AUDIT.md  v0.32.0-REQUIREMENTS.md  v0.32.0-ROADMAP.md
.planning/phases/04-foundation/: 04-01-PLAN.md  04-01-SUMMARY.md  04-02-PLAN.md  04-02-SUMMARY.md  04-CONTEXT.md  04-RESEARCH.md  04-VERIFICATION.md
.planning/phases/05-report-optimization/: 05-01-PLAN.md  05-01-SUMMARY.md  05-02-PLAN.md  05-02-SUMMARY.md  05-03-PLAN.md  05-03-SUMMARY.md  05-04-PLAN.md  05-04-SUMMARY.md  05-CONTEXT.md  05-RESEARCH.md  05-VERIFICATION.md
.planning/phases/06-alignment-optimization/: 06-01-PLAN.md  06-01-SUMMARY.md  06-02-PLAN.md  06-02-SUMMARY.md  06-CONTEXT.md  06-RESEARCH.md  06-VERIFICATION.md
.planning/phases/07-comparison-cleanup/: 07-01-PLAN.md  07-01-SUMMARY.md  07-02-PLAN.md  07-02-SUMMARY.md  07-03-PLAN.md  07-03-SUMMARY.md  07-CONTEXT.md  07-RESEARCH.md  07-VERIFICATION.md
.planning/phases/08-insert-region-aware-filtering/: 08-01-PLAN.md  08-01-SUMMARY.md  08-02-PLAN.md  08-02-SUMMARY.md  08-CONTEXT.md  08-RESEARCH.md  08-VERIFICATION.md  REPORT-UX-AUDIT.md
.planning/phases/09-coverage-metrics/: 09-01-PLAN.md  09-01-SUMMARY.md  09-02-PLAN.md  09-02-SUMMARY.md  09-CONTEXT.md  09-RESEARCH.md  09-VERIFICATION.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
conda/: plasmicheck_full_conda.yml
plasmicheck/: __init__.py  cli.py  config.json  config.py  resources.py  thread_config.py  version.py
plasmicheck/scripts/: __init__.py  align_reads.py  compare_alignments.py  convert_gb_to_fasta.py  convert_plasmidfile_to_fasta.py  coverage_metrics.py  create_indexes.py  generate_report.py  generate_summary_reports.py  run_pipeline.py  spliced_alignment.py  utils.py
plasmicheck/scripts/plotting/: __init__.py  colors.py  matplotlib_backend.py
plasmicheck/templates/: report_template.html  summary_template.html
scripts/: benchmark.py  regression_test.py
snakemake/: plasmicheck.smk  run_plasmicheck.sh
static/img/: plasmicheck_ascii.txt
templates/: report_template.html  summary_template.html
tests/: conftest.py  test_cli.py  test_compare_alignments.py  test_config.py  test_convert.py  test_coverage_metrics.py  test_create_indexes.py  test_generate_report.py  test_generate_summary_reports.py  test_integration.py  test_matplotlib_backend.py  test_resources.py  test_run_pipeline.py  test_spliced_alignment.py  test_thread_cli.py  test_thread_config.py  test_utils.py
tests/data/real/: README.md  contaminated.renamed.bam.bai  not_contaminated.renamed.bam.bai
tests/data/simulated/: README.md
tests/data/synthetic/: contaminated_R1.fastq  contaminated_R2.fastq  generate_test_data.py  human_ref.fasta  not_contaminated_R1.fastq  not_contaminated_R2.fastq  plasmid.gb
tests/data/synthetic/expected/: not_contaminated.verdict.txt
